--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=4000
-DATABASE_URL=postgres://orasaoneal:@localhost:5432/airbnb_clone
+PORT=6000
+DATABASE_URL=mongodb://localhost:27017/twitter
 SECRET=abc
